--- a/styles.css
+++ b/styles.css
@@ -10,14 +10,16 @@ body {
     position: absolute;
     width: 400px;
     top: 280px;
-    left: 900px;
+    left: 55%;
+    transform: translateX(-50%);
 }
 
 .texto {
     text-align: center;
     position: absolute;
     top: 100px;
-    left: 900px;
+    left: 55%;
+    transform: translateX(-50%);
 }
 
 .circulo {
@@ -27,14 +29,14 @@ body {
     border: 5px solid rgb(137, 207, 253);
     border-radius: 50%;
     position: absolute;
-    top: 100px;
-    left: 650px;
+    top: 110px;
+    left: 37%;
+    transform: translateX(-50%);
 }
 
 .tituloComIcone {
     display: flex;
     align-items: flex-start;
-    gap: 10px;
     position: relative;
 }
 
@@ -42,7 +44,6 @@ body {
     position: absolute;
     left: 0px;
     top: 65px;
-
 }
 
 .icone2 {
@@ -51,25 +52,33 @@ body {
     top: 60px;
 }
 
+.icone3 {
+    position: absolute;
+    left: 85px;
+    top: 60px;
+}
+
 .texto2 {
     text-align: left;
     position: absolute;
     top: 280px;
-    left: 900px;
+    left: 55%;
+    transform: translateX(-50%);
 }
 
 .foto {
     position: absolute;
-    top: 93px;
-    left: 650px;
+    top: 103px;
+    left: 37%;
+    transform: translateX(-50%);
 }
 
 .materia1 {
-    font-size: 12px;    
+    font-size: 12px;
     position: absolute;
     top: 450px;
-    left: 400px;
-    display: flex;  
+    left: 360px;
+    display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
@@ -86,33 +95,33 @@ body {
 }
 
 .materia2 {
-    font-size: 12px;    
+    font-size: 12px;
     position: absolute;
     top: 450px;
-    left: 670px;
-    display: flex;  
+    left: 660px;
+    display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
 }
 
 .materia3 {
-    font-size: 12px;    
+    font-size: 12px;
     position: absolute;
     top: 450px;
-    left: 940px;
-    display: flex;  
+    left: 960px;
+    display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
 }
 
 .materia4 {
-    font-size: 12px;    
+    font-size: 12px;
     position: absolute;
     top: 450px;
-    left: 1210px;
-    display: flex;  
+    left: 1260px;
+    display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
@@ -127,4 +136,3 @@ button {
     font-weight: bold;
     cursor: pointer;
 }
-
